@@ -1072,7 +1072,6 @@ static void
 real_get_default_size (NautilusWindow *window,
 		       guint *default_width, guint *default_height)
 {
-	
 	if (default_width) {
 		*default_width = NAUTILUS_NAVIGATION_WINDOW_DEFAULT_WIDTH;
 	}
